--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="https://youtu.be/Zn3L_HbcrpA" class="image"><img src="images/thumbs/bay.jpg" alt="" /></a>
-							<h2>Ta Ta Ta by Bayanni<br>Afrobeats. Nigeria. 2002.</h2>
-							<p></p>
+							<h1>Ta Ta Ta by Bayanni</h1>
+							<h2>Afrobeats. Nigeria. 2002.</h2>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
