Add iframe to mystery lady

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="https://youtu.be/Zn3L_HbcrpA" class="image"><img src="images/thumbs/bay.jpg" alt="" /></a>
-							<h1>Ta Ta Ta by Bayanni</h1>
-							<h2>Afrobeats. Nigeria. 2002.</h2>
+							<h2>Ta Ta Ta by Bayanni</h2>
+							<p>Afrobeats. Nigeria. 2002.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/mystery-lady/1539193096?i=1539193098"></iframe>
+							<a href="https://music.apple.com/us/album/mystery-lady/1539193096?i=1539193098" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>Mystery Lady by Masego</h2>
 							<p>R&B/Soul, Afrobeats. Jamaica. 2020.</p>
 						</article>
