update masego pic

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<p>Afrobeats. Nigeria. 2002.</p>
 						</article>
 						<article class="thumb">
-							<a href="https://music.apple.com/us/album/mystery-lady/1539193096?i=1539193098" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<a href="https://music.apple.com/us/album/mystery-lady/1539193096?i=1539193098" class="image"><img src="images/thumbs/masego.jpg" alt="" /></a>
 							<h2>Mystery Lady by Masego</h2>
 							<p>R&B/Soul, Afrobeats. Jamaica. 2020.</p>
 						</article>
